feat: add resources/roles to destinations api
